# fun-with-coroutines

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  module-5-magic-of-coroutines.pptx  module-6-presentation.pptx  run_async_tasks.cpp  run_echo_demo.cpp  run_generator.cpp
.cursor/rules/: project-conventions.mdc
Samples/: CMakeLists.txt
async_io/: AsyncRead.h  CoroutineObject.h  EventFd.h  Fd.h  FdSet.h  FileDescriptor.h  NotifySignal.h  PipeFds.h  README.md  Selector.cpp  Selector.h  run_async_io.cpp  run_echo_demo.cpp  wait_for_fds.cpp  wait_for_fds.h
async_io/async/: AsyncBuffer.h  AsyncIo.h  AsyncIoCoroutine.h  AsyncRead.h  AsyncReadBuffer.h  AsyncReadExact.h  AsyncWrite.h  AsyncWriteBuffer.h  AsyncWriteExact.h  ERROR_HANDLING.md  README.md
async_io/echo/: EchoClient.cpp  EchoClient.h  EchoServer.cpp  EchoServer.h  Pipe.cpp  Pipe.h  README.md
async_io/reactor/: EventFd.h  FdSet.h  NotifySignal.h  Reactor.cpp  Reactor.h
async_tasks/: AsyncTask.h  CoroutineObject.h  EventLoop.cpp  EventLoop.h  run_async_tasks.cpp  unlock_guard.h  work_guard.h
async_tasks/event_loop/: EventLoop.cpp  EventLoop.h
common/async_io/: CalcLine.h  LineHandler.h  LineTransport.h
common/event_loop/: EventLoop.cpp  unlock_guard.h  work_guard.h
common/generator/: Iterator.h  Tree.h
common/io/: print.h
common/parser/: Protocol.h
common/pipe/: Pipe.cpp  Pipe.h
common/reactor/: EventFd.h  FdSet.h  NotifySignal.h  Reactor.cpp  Reactor.h  WorkGuard.h
common/testing/: Delays.h
coroutines/: run_async_tasks.cpp  run_async_tasks_over_event_loop.cpp  run_echo_over_reactor.cpp  run_generator.cpp  samples.h
coroutines/01-generator/: Fibonacci.cpp  Fibonacci.h  TreeTraversal.cpp  TreeTraversal.h
coroutines/02-parser/: ProtocolParser.cpp  ProtocolParser.h
coroutines/03-async-tasks/: AsyncTask.h  AsyncTaskMarshalled.h  MarshalledTask.cpp  MarshalledTask.h  UnmarshalledTask.cpp  UnmarshalledTask.h
coroutines/05-aggregation/: AsyncAggregate.cpp  CalculatorBatch.cpp  ParserStore.cpp
coroutines/1. generator/: Fibonacci.cpp  Fibonacci.h  Generator.h  TreeTraversal.cpp  TreeTraversal.h  run_fibonacci_sample.cpp  run_generator.cpp  run_tree_sample.cpp
coroutines/2. async_tasks/: AsyncTask.h  run_async_tasks.cpp
coroutines/2. parser/: ProtocolParser.cpp  ProtocolParser.h  run_parser.cpp
coroutines/3. async_tasks/: AsyncTaskMarshalled.h  MarshalledTask.cpp  UnmarshalledTask.cpp  run_async_tasks.cpp  run_marshalled_sample.cpp  run_unmarshalled_sample.cpp
coroutines/4. async_io/: LineRpc.cpp  LineRpc.h  (+3 more)
generator/: Generator.h  run_generator.cpp
no-coroutines/: run_async_tasks.cpp  run_async_tasks_over_event_loop.cpp  run_echo_over_reactor.cpp  run_generator.cpp  samples.h
tests/: CalcSession.cpp  CalcSession.h  Demo1GeneratorTest.cpp  Demo2ParserTest.cpp  Demo3AsyncTasksTest.cpp  Demo4CalculatorTest.cpp  Demo5AggregationTest.cpp  Side.h
(+210 files in other folders)
